smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-name-syntax.smithy
// Parse error at line 4, column 1 near `invalid##foo..bar`: Invalid trait name syntax. Trait names must adhere to the same syntax as shape IDs.
namespace foo.bar

@invalid##foo..bar
string MyString
